# cowork-frameio

./: .mcp.json  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md
.claude-plugin/: plugin.json
agents/: feedback-synthesizer.md  review-coordinator.md  upload-agent.md
commands/: collect-feedback.md  create-share.md  review-status.md  upload-asset.md
docs/: frameio-plugin-spec.docx  frameio-v4-api-reference.md  kickoff-prompt.md  plugin-alignment-prompt.md  skills-sh-reference.md
frameio/: .mcp.json  CHANGELOG.md  CLAUDE.md  CONNECTORS.md  README.md  frameio.local.md  sync-version.sh
frameio/.claude-plugin/: plugin.json
frameio/agents/: review-coordinator.md
frameio/commands/: review-status.md  upload-asset.md
frameio/mcp-server/: .gitignore  pyproject.toml  setup.sh
frameio/mcp-server/src/frameio_mcp/: __init__.py  client.py
frameio/mcp-server/tests/: test_client.py
frameio/scripts/: bump-version.sh
frameio/skills/asset-management/: SKILL.md
frameio/skills/comment-analysis/: SKILL.md
frameio/skills/project-navigation/: SKILL.md
frameio/skills/review-workflow/: SKILL.md
mcp-server/: pyproject.toml  setup.ps1  setup.sh
mcp-server/src/frameio_mcp/: auth.py  server.py
mcp-server/src/frameio_mcp/tools/: __init__.py  files.py  shares.py
mcp-server/src/frameio_mcp/utils/: rate_limit.py
mcp-server/tests/: test_rate_limit.py  test_tools.py
scripts/: bump-version.py
skills/asset-management/: SKILL.md
skills/comment-analysis/: SKILL.md
skills/project-navigation/: SKILL.md
skills/review-workflow/: SKILL.md
(+5 files in other folders)
