[project]
name = "frameio-mcp"
version = "1.0.0"
description = "MCP server for Frame.io V4 API"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
